--- a/examples/font_selection.html
+++ b/examples/font_selection.html
@@ -88,7 +88,7 @@
     
     var georgiaButton = $$('.editor_toolbar .georgia').first();
     editor.observe('wysihat:cursormove', function(event) {
-      if (editor.fontSelected() == 'Georgia')
+      if (editor.getSelectedStyles().get('fontname') == 'Georgia')
         georgiaButton.addClassName('selected')
       else
         georgiaButton.removeClassName('selected');
@@ -96,12 +96,11 @@
     
     var arialButton = $$('.editor_toolbar .arial').first();
     editor.observe('wysihat:cursormove', function(event) {
-      if (editor.fontSelected() == 'Arial')
+      if (editor.getSelectedStyles().get('fontname') == 'Arial')
         arialButton.addClassName('selected')
       else
         arialButton.removeClassName('selected');
     });
-  });
 </pre></code>
 
   <form action="#" method="post" style="width: 500px;">
